Fix footer margin on mobile screen

--- a/huddle-landing-page-with-single-introductory-section-master/style.css
+++ b/huddle-landing-page-with-single-introductory-section-master/style.css
@@ -143,6 +143,6 @@ footer .icon {
 
 @media screen and (max-width: 400px) {
     footer {
-        margin-top: 30rem;
+        margin-top: 100rem;
     }
 }
